--- a/index.html
+++ b/index.html
@@ -3,8 +3,34 @@
   <head>
     <meta charset="utf-8">
     <title>Resume</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-  <h1>Resumebuilding</h1>
+    <div class="main">
+      <div class="profile">
+<img src="images.jpg" alt="images">
+<h3>samyuktha</h3>
+<a href="mailto:saisamyukthaysr@gmail.com">saisamyukthaysr@gmail.com</a>
+<h3>9505575655</h3>
+<div class="address">
+  <h1>Address</h1>
+  <hr>
+  <p>SVIT College</p>
+
+</div>
+
+      </div>
+      <div class="content">
+        <h1>carrier objective</h1> <hr>
+
+      </div>
+
+    </div>
+    <script type="text/javascript"src="main.js">
+
+    </script>
+
+    </script>
   </body>
 </html>
